# Spidey

./: .dockerignore  .gitignore  Dockerfile  LAUNCH.md  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: .flutter-plugins-dependencies  README.md  pubspec.yaml
app/.dart_tool/: package_config.json  package_graph.json
app/.dart_tool/dartpad/: web_plugin_registrant.dart
app/.dart_tool/flutter_build/de53a713f867c904722fc59c848bef82/: .filecache  app.dill.deps  dart2js.d  dart2js.stamp  dart2wasm.stamp  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  main.dart  main.dart.js  main.dart.js.deps  outputs.json  service_worker.d  web_entrypoint.stamp  web_release_bundle.stamp  web_resources.d  web_service_worker.stamp  web_static_assets.stamp  web_templated_files.stamp
app/android/app/: build.gradle.kts
app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
app/ios/Flutter/ephemeral/: flutter_native_integration.env
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  spidey_client.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh  flutter_native_integration.env
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
docs/: API.md  ARCHITECTURE.md  CAPABILITIES.md  OFFLINE.md  PLATFORM.md  SECURITY.md
eval/: run_eval.py  tasks.jsonl
examples/: demo_offline.py
spidey/: __init__.py  agent.py  cli.py  demo.py  events.py  llm.py  memory.py  router.py  safety.py  tools.py  voice.py
spidey/platform/: __init__.py  dashboard.py
spidey/platform/core/: __init__.py  auth.py  db.py  graph.py  llmutil.py  metrics.py  migrations.py  notify.py  queue.py  scheduler.py  text.py  websearch.py
spidey/platform/modules/: __init__.py  analytics.py  brain.py  chat_history.py  codeassist.py  demo.py  docgen.py  driving.py  email_assistant.py  filepipe.py  fleet.py  jobs.py  llmgateway.py  media.py  memory_engine.py  nexus.py  research.py  sessions.py  team.py  webauto.py
spidey/server/: __init__.py  app.py
spidey/server/static/: index.html  manifest.webmanifest
spidey/server/static/assets/: index--1FgLZh_.css  index-2Sv-s5tZ.js  index-5wvm6kKZ.js  index-B13NktHm.js  index-BId1ZjWn.js  index-BMLF8uEo.css  index-BUTLaH3y.css  index-BVK0ptfF.css  index-Bgq22odm.js  index-Bk6X62Af.js  index-Br2Ki3Nd.js  index-C1rM76Yd.css  index-C5tHMXYO.js  index-CDPyA10x.js  index-CFkTiK0m.js  index-CQDZXQ5l.js  index-CQIXifQs.js  index-CRGgrCAn.css  index-CSevzDPj.js  index-Cc3BQ4mc.css  index-CpucLCgS.css  index-Cqy9zqsr.css  index-Cu_usiM2.css  index-D-vXl4KU.css  index-D8O-ujb1.css  index-D8VIz8gD.css  index-DHHlqjI3.js  index-DJGUYHNd.js  index-DmSBcnNg.js  index-IAL7PJcv.js  index-V4-to6bb.js  index-c0-qe4Aq.css  index-iGeSdOt8.js  index-mZ6y8Jk-.js  index-obwUWwcp.css  index-ss_8Aatv.js
tests/: conftest.py  test_brain.py  test_core.py  test_modules.py  test_nexus.py  test_studio.py
training/: Modelfile.example  README.md  dpo_finetune.py  finetune.py  prepare_data.py  prepare_dpo_data.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: AgentGraph.jsx  App.jsx  Boot.jsx  Chat.jsx  History.jsx  Onboarding.jsx  Settings.jsx  Studio.jsx  Voice.jsx  index.css  main.jsx  studio.css  useSpideySocket.js  useVoice.js
workspace/: README.md
(+10 files in other folders)
