[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spidey-agent"
version = "1.0.0"
description = "An open, self-hostable coding agent that runs on free local models — with a QLoRA pipeline to fine-tune its brain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Siddharth Patni" }]
keywords = ["ai-agent", "coding-agent", "ollama", "llm", "qlora", "tool-calling", "local-llm"]
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.29", "websockets>=12.0"]
voice = ["vosk>=0.3.45"]

[project.urls]
Homepage = "https://github.com/Siddharthpatni/Spidey"
Issues = "https://github.com/Siddharthpatni/Spidey/issues"

[project.scripts]
spidey = "spidey.cli:main"

[tool.setuptools]
packages = ["spidey", "spidey.server"]

[tool.setuptools.package-data]
"spidey.server" = ["static/**/*"]
